--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,14 @@
 [project]
 name = "whisper_asr_colab"
-version = "1.0.1"
+version = "1.0.2"
 
 dependencies =  [
-    # "whisperx@git+https://github.com/m-bain/whisperX.git",
-    "whisperx",
-    "python-docx",
+    "faster-whisper@git+https://github.com/SYSTRAN/faster-whisper.git",
+    "python-docx>=1",
     "yt-dlp",
-    "ffmpeg-python",
+    "ffmpeg-python>=0.2",
+    "numpy>=1",
+    "pandas>=2",
+    "pyannote.audio>=3",
+    "torch>=2.1.1 ",
 ]
