--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools", "setuptools_scm"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "whisper_asr_colab"
 version = "1.0.3"
@@ -12,3 +16,12 @@ dependencies =  [
     "pyannote.audio>=3",
     "torch>=2.1.1 ",
 ]
+
+[tool.setuptools.packages.find]
+exclude = ["build", "tests"]
+
+[tool.setuptools.dynamic]
+version = {attr = "version"}
+
+[tool.setuptools_scm]
+write_to = "_version.py"
