--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install module
         run: |
           pip install .
-          pip install pytest
+          pip install pytest ipython ipywidgets ctranslate2==4.4.0
 
       - name: Run pytest
         env:
