--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-whisper_asr_colab/_version.py
+whisper_asr_colab/templates/*
 try*
 .vscode
 .pre-commit-config.yaml
 uv.lock
+build
+templates
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
