--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         uses: astral-sh/setup-uv@v4
         with:
           enable-cache: true
-          python-version: "3.10"
+          python-version: "3.12"
           cache-dependency-glob: |
             **/pyproject.toml
             **/uv.lock
@@ -28,10 +28,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends ffmpeg
 
-      - name: Install module
-        run: uv add --dev pytest ipython ipywidgets
+      - name: Install modules
+        run: uv add --dev pytest ipython ipywidgets torch pyannote.audio>=3
 
       - name: Run pytest
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: uv run pytest tests
+
